--- a/assets/settings.json
+++ b/assets/settings.json
@@ -1,9 +1,5 @@
 {
-  "humor": 0,
-  "formality": 50,
-  "objectivity": 50,
-  "creativity": 50,
-  "politeness": 100,
-  "speed": 50,
-  "allow_thinking": false
+  "auto-conversation-end": false,
+  "emotional-voice": false,
+  "permanent-memory": true
 }
