--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,10 @@
-openai==1.3.5
-python-dotenv==1.0.0
-whisper==1.1.10
-pvporcupine==2.2.0
-pyaudio==0.2.13
-pygame==2.5.2
-numpy==1.24.3
-pillow==10.0.1
-mss==9.0.1
 requests
+python-dotenv
+numpy
+pyaudio
+pygame
+mss
+Pillow
+whisper
+spotipy
 pyperclip
-pdfplumber
