--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ whisper
 spotipy
 pyperclip
 playwright
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+python-dateutil
+tiktoken
